--- a/.env
+++ b/.env
@@ -6,4 +6,4 @@
 
 DATABASE_URL="mysql://root:12aa34aa@localhost:3306/bdinfancia1"
 
-NEXTAUTH_URL="http://localhost:3000"
+NEXTAUTH_URL="https://localhost:3000"
